--- a/sass/content.scss
+++ b/sass/content.scss
@@ -226,3 +226,12 @@ a.btn.btn-success:hover {
 	background-color: /* #467779 */orange;
 	border-color: #22393a;
 }
+/********************************
+	 Third Page Image Styles
+*********************************/
+section#block-system-main .view-collection-subject-view img {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10%;
+}
